--- a/themes/PaperMod/assets/css/common/post-single.css
+++ b/themes/PaperMod/assets/css/common/post-single.css
@@ -36,6 +36,12 @@
     color: var(--content);
 }
 
+.post-content strong {
+    color: var(--atom-green);
+}
+
+
+
 .post-content h3,
 .post-content h4,
 .post-content h5,
@@ -46,28 +52,37 @@
 .post-content h1 {
     margin: 40px auto 32px;
     font-size: 40px;
+    color: var(--purple);
 }
-
+  
 .post-content h2 {
     margin: 32px auto 24px;
     font-size: 32px;
+    color: var(--pink);
+
 }
 
 .post-content h3 {
     font-size: 24px;
+    color: var(--blue);
 }
 
 .post-content h4 {
     font-size: 16px;
+    color: var(--yellow);
+
 }
 
 .post-content h5 {
     font-size: 14px;
+    color: var(--red);
 }
 
 .post-content h6 {
     font-size: 12px;
+    color: var(--green);
 }
+
 
 .post-content a,
 .toc a:hover {
@@ -82,6 +97,14 @@
     box-shadow: 0 -1px 0 var(--primary) inset;
 }
 
+.post-content a:visited {
+    color: #79A9EC;
+}
+  
+.post-content a:hover {
+    color: #AFCBF4;
+  }
+
 .post-content del {
     text-decoration: none;
     background: linear-gradient(to right, var(--primary) 100%, transparent 0) 0 50%/1px 1px repeat-x;
@@ -94,6 +117,7 @@
 .post-content ul {
     margin-bottom: var(--content-gap);
 }
+
 
 .post-content ol,
 .post-content ul {
@@ -150,6 +174,8 @@
 .post-content table:not(.highlighttable) td code:only-child {
     margin: auto 0;
 }
+
+
 
 .post-content .highlight table {
     border-radius: var(--radius);
