--- a/themes/PaperMod/assets/css/core/theme-vars.css
+++ b/themes/PaperMod/assets/css/core/theme-vars.css
@@ -15,6 +15,28 @@
     --hljs-bg: rgb(28, 29, 33);
     --code-bg: rgb(245, 245, 245);
     --border: rgb(238, 238, 238);
+
+    /* Colors */
+    --base-h: 212; /* Base hue */
+    --base-s: 15%; /* Base saturation */
+    --base-d: 13%; /* Base lightness Dark Mode  - 0 is black */
+    --base-l: 97%; /* Base lightness Light Mode  - 100 is white */
+    --accent-h: 215; /* Accent hue */
+    --accent-s: 75%; /* Accent saturation */
+    --accent-d: 70%; /* Accent lightness Dark Mode */
+    --accent-l: 60%; /* Accent lightness Light Mode */
+  
+    --blue: #2e80f2;
+    --pink: #ff82b2;
+    --green: #12c712d2;
+    --yellow: #e5b567;
+    --orange: #e87d3e;
+    --red: #e83e3e;
+    --purple: #9e86c8;
+    --atom-green: #6ecf6c;
+    --atom-blue: #0084bc;
+    --atom-aqua: #0084bc;
+
 }
 
 .dark {
@@ -28,6 +50,7 @@
     --code-bg: rgb(55, 56, 62);
     --border: rgb(51, 51, 51);
 }
+
 
 .list {
     background: var(--code-bg);
