--- a/themes/PaperMod/layouts/partials/templates/schema_json.html
+++ b/themes/PaperMod/layouts/partials/templates/schema_json.html
@@ -4,7 +4,7 @@
   "@context": "https://schema.org",
   "@type": "{{- ( site.Params.schema.publisherType | default "Organization") | title -}}",
   "name": {{ site.Title }},
-  "url": {{ site.BaseURL }},
+  "url": "humailkhan829.net",
   "description": {{ site.Params.description | plainify | truncate 180 | safeHTML }},
   "thumbnailUrl": {{ site.Params.assets.favicon | default "favicon.ico" | absURL }},
   "sameAs": [
