--- a/themes/PaperMod/layouts/partials/breadcrumbs.html
+++ b/themes/PaperMod/layouts/partials/breadcrumbs.html
@@ -3,7 +3,7 @@
     {{- $url := replace .Parent.Permalink (printf "%s" site.BaseURL) "" }}
     {{- $lang_url := strings.TrimPrefix (printf "%s/" .Lang) $url -}}
 
-    <a href="humailkhan829.net">{{ i18n "home" | default "Home" }}</a>
+    <a href="https://www.humailkhan829.net">{{ i18n "home" | default "Home" }}</a>
     {{- $scratch := newScratch }}
     {{- range $index, $element := split $lang_url "/" }}
 
