--- a/themes/PaperMod/layouts/_default/home.html
+++ b/themes/PaperMod/layouts/_default/home.html
@@ -55,8 +55,14 @@
             {{- end }}
         </div>
         {{- end }}
-    </div>
-    {{- end}}
+        {{- end}}
+        <h2 style="margin-bottom: 15px;">Featured Projects:</h2>
+        {{ range where .Site.RegularPages "Params.featured" "==" true }}
+        <div class="project-card">
+            <a href="{{ .Permalink }}" class="button">AWS Cloud Resume Challenge</a>
+        </div>
+        {{ end }}
+    </div>    
 </div>
 
 
